dont run coverage until code is added

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ install:
 env:
   - DB=sqlite
 script:
-  - nosetests --with-coverage --cover-package=models
+  - nosetests
 after_success: coveralls
 cache: pip
