more tests and adjust travis, coverage should only cover commands package

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ install:
 env:
   - DB=sqlite
 script:
-  - nosetests
+  - nosetests --with-coverage --cover-package=commands
 after_success: coveralls
 cache: pip
